logging/central/fluent-bit-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: fluent-bit-loki
  name: loki-fluent-bit-loki
spec:
  selector:
    matchLabels:
      app: fluent-bit-loki
  template:
    metadata:
      labels:
        app: fluent-bit-loki
    spec:
      containers:
      #- image: grafana/fluent-bit-plugin-loki:0.1
      - image: grafana/fluent-bit-plugin-loki:latest
        imagePullPolicy: IfNotPresent
        name: fluent-bit-loki
        ports:
        - containerPort: 2020
          name: http-metrics
          protocol: TCP
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /fluent-bit/etc
          name: config
        - mountPath: /run/fluent-bit
          name: run
        - mountPath: /var/log
          name: varlog
        - mountPath: /var/lib/docker/containers
          name: varlibdockercontainers
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: loki-fluent-bit-loki
      serviceAccountName: loki-fluent-bit-loki
      terminationGracePeriodSeconds: 10
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      volumes:
      - configMap:
          defaultMode: 420
          name: loki-fluent-bit-loki
        name: config
      - hostPath:
          path: /run/fluent-bit
          type: ""
        name: run
      - hostPath:
          path: /var/log
          type: ""
        name: varlog
      - hostPath:
          path: /var/lib/docker/containers
          type: ""
        name: varlibdockercontainers
  updateStrategy:
    type: RollingUpdate
