logging/central/loki-memberlist.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
  name: loki-memberlist
spec:
  clusterIP: None
  clusterIPs:
  - None
  ports:
  - name: http
    port: 7946
    protocol: TCP
    targetPort: http-memberlist
  selector:
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
    app.kubernetes.io/part-of: memberlist
  sessionAffinity: None
  type: ClusterIP
