logging/central/loki-memcached-chunks.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: memcached-chunks
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
  name: loki-memcached-chunks
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: memcached-chunks
      app.kubernetes.io/instance: loki
      app.kubernetes.io/name: loki
  serviceName: loki-memcached-chunks
  template:
    metadata:
      labels:
        app.kubernetes.io/component: memcached-chunks
        app.kubernetes.io/instance: loki
        app.kubernetes.io/name: loki
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: memcached-chunks
                  app.kubernetes.io/instance: loki
                  app.kubernetes.io/name: loki
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: memcached-chunks
                app.kubernetes.io/instance: loki
                app.kubernetes.io/name: loki
            topologyKey: kubernetes.io/hostname
      containers:
      - image: docker.io/memcached:1.6.7-alpine
        imagePullPolicy: IfNotPresent
        name: memcached
        ports:
        - containerPort: 11211
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 11211
        runAsGroup: 11211
        runAsNonRoot: true
        runAsUser: 11211
      serviceAccount: loki
      serviceAccountName: loki
      terminationGracePeriodSeconds: 30
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: memcached-chunks
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
  name: loki-memcached-chunks
spec:
  clusterIP: None
  clusterIPs:
  - None
  ports:
  - name: http
    port: 11211
    protocol: TCP
    targetPort: http
  - name: http-metrics
    port: 9150
    protocol: TCP
    targetPort: http-metrics
  selector:
    app.kubernetes.io/component: memcached-chunks
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
  sessionAffinity: None
  type: ClusterIP
