logging/central/ingress-loki-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: loki.172.31.14.138.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-gateway
                port:
                  number: 80
